MiniLanguage/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt SEMICOLON stmt_list
Rule 3     stmt_list -> stmt
Rule 4     stmt -> assign_stmt
Rule 5     stmt -> while_stmt
Rule 6     stmt -> if_stmt
Rule 7     stmt -> define_stmt
Rule 8     expr -> expr PLUS term
Rule 9     expr -> expr MINUS term
Rule 10    expr_list -> expr COMMA expr_list
Rule 11    expr_list -> expr
Rule 12    expr -> term
Rule 13    term -> term TIMES fact
Rule 14    term -> fact
Rule 15    fact -> LPAREN expr RPAREN
Rule 16    fact -> NUMBER
Rule 17    fact -> IDENT
Rule 18    fact -> func_call
Rule 19    fact -> List
Rule 20    List -> SQUAREBRAC1 ListItems SQUAREBRAC2
Rule 21    List -> SQUAREBRAC1 SQUAREBRAC2
Rule 22    ListItems -> Item COMMA ListItems
Rule 23    ListItems -> Item
Rule 24    Item -> NUMBER
Rule 25    Item -> List
Rule 26    fact -> CAR LPAREN Item RPAREN
Rule 27    fact -> CAR LPAREN IDENT RPAREN
Rule 28    fact -> CDR LPAREN IDENT RPAREN
Rule 29    fact -> CDR LPAREN Item RPAREN
Rule 30    fact -> NULL QUESTIONMARK LPAREN Item RPAREN
Rule 31    fact -> NULL QUESTIONMARK LPAREN IDENT RPAREN
Rule 32    fact -> LIST QUESTIONMARK LPAREN Item RPAREN
Rule 33    fact -> LIST QUESTIONMARK LPAREN IDENT RPAREN
Rule 34    fact -> INT QUESTIONMARK LPAREN IDENT RPAREN
Rule 35    fact -> INT QUESTIONMARK LPAREN Item RPAREN
Rule 36    fact -> CONS LPAREN IDENT COMMA IDENT RPAREN
Rule 37    fact -> CONS LPAREN Item COMMA List RPAREN
Rule 38    assign_stmt -> IDENT ASSIGNOP expr
Rule 39    while_stmt -> WHILE expr DO stmt_list OD
Rule 40    if_stmt -> IF expr THEN stmt_list ELSE stmt_list FI
Rule 41    define_stmt -> DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END
Rule 42    param_list -> IDENT COMMA param_list
Rule 43    param_list -> IDENT
Rule 44    func_call -> IDENT LPAREN expr_list RPAREN

Terminals, with rules where they appear

ASSIGNOP             : 38
CAR                  : 26 27
CDR                  : 28 29
COMMA                : 10 22 36 37 42
CONS                 : 36 37
DEFINE               : 41
DO                   : 39
ELSE                 : 40
END                  : 41
FI                   : 40
IDENT                : 17 27 28 31 33 34 36 36 38 41 42 43 44
IF                   : 40
INT                  : 34 35
LIST                 : 32 33
LPAREN               : 15 26 27 28 29 30 31 32 33 34 35 36 37 41 44
MINUS                : 9
NULL                 : 30 31
NUMBER               : 16 24
OD                   : 39
PLUS                 : 8
PROC                 : 41
QUESTIONMARK         : 30 31 32 33 34 35
RPAREN               : 15 26 27 28 29 30 31 32 33 34 35 36 37 41 44
SEMICOLON            : 2
SQUAREBRAC1          : 20 21
SQUAREBRAC2          : 20 21
THEN                 : 40
TIMES                : 13
WHILE                : 39
error                : 

Nonterminals, with rules where they appear

Item                 : 22 23 26 29 30 32 35 37
List                 : 19 25 37
ListItems            : 20 22
assign_stmt          : 4
define_stmt          : 7
expr                 : 8 9 10 11 15 38 39 40
expr_list            : 10 44
fact                 : 13 14
func_call            : 18
if_stmt              : 6
param_list           : 41 42
program              : 0
stmt                 : 2 3
stmt_list            : 1 2 39 40 40 41
term                 : 8 9 12 13
while_stmt           : 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (7) stmt -> . define_stmt
    (38) assign_stmt -> . IDENT ASSIGNOP expr
    (39) while_stmt -> . WHILE expr DO stmt_list OD
    (40) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI
    (41) define_stmt -> . DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END

    IDENT           shift and go to state 6
    WHILE           shift and go to state 1
    IF              shift and go to state 8
    DEFINE          shift and go to state 5

    stmt_list                      shift and go to state 9
    if_stmt                        shift and go to state 10
    define_stmt                    shift and go to state 2
    stmt                           shift and go to state 7
    assign_stmt                    shift and go to state 3
    while_stmt                     shift and go to state 11
    program                        shift and go to state 4

state 1

    (39) while_stmt -> WHILE . expr DO stmt_list OD
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (19) fact -> . List
    (26) fact -> . CAR LPAREN Item RPAREN
    (27) fact -> . CAR LPAREN IDENT RPAREN
    (28) fact -> . CDR LPAREN IDENT RPAREN
    (29) fact -> . CDR LPAREN Item RPAREN
    (30) fact -> . NULL QUESTIONMARK LPAREN Item RPAREN
    (31) fact -> . NULL QUESTIONMARK LPAREN IDENT RPAREN
    (32) fact -> . LIST QUESTIONMARK LPAREN Item RPAREN
    (33) fact -> . LIST QUESTIONMARK LPAREN IDENT RPAREN
    (34) fact -> . INT QUESTIONMARK LPAREN IDENT RPAREN
    (35) fact -> . INT QUESTIONMARK LPAREN Item RPAREN
    (36) fact -> . CONS LPAREN IDENT COMMA IDENT RPAREN
    (37) fact -> . CONS LPAREN Item COMMA List RPAREN
    (44) func_call -> . IDENT LPAREN expr_list RPAREN
    (20) List -> . SQUAREBRAC1 ListItems SQUAREBRAC2
    (21) List -> . SQUAREBRAC1 SQUAREBRAC2

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 14
    IDENT           shift and go to state 17
    CAR             shift and go to state 13
    CDR             shift and go to state 25
    NULL            shift and go to state 15
    LIST            shift and go to state 23
    INT             shift and go to state 21
    CONS            shift and go to state 12
    SQUAREBRAC1     shift and go to state 24

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 22
    List                           shift and go to state 18
    fact                           shift and go to state 26

state 2

    (7) stmt -> define_stmt .

    SEMICOLON       reduce using rule 7 (stmt -> define_stmt .)
    ELSE            reduce using rule 7 (stmt -> define_stmt .)
    OD              reduce using rule 7 (stmt -> define_stmt .)
    END             reduce using rule 7 (stmt -> define_stmt .)
    FI              reduce using rule 7 (stmt -> define_stmt .)
    $end            reduce using rule 7 (stmt -> define_stmt .)


state 3

    (4) stmt -> assign_stmt .

    SEMICOLON       reduce using rule 4 (stmt -> assign_stmt .)
    ELSE            reduce using rule 4 (stmt -> assign_stmt .)
    OD              reduce using rule 4 (stmt -> assign_stmt .)
    END             reduce using rule 4 (stmt -> assign_stmt .)
    FI              reduce using rule 4 (stmt -> assign_stmt .)
    $end            reduce using rule 4 (stmt -> assign_stmt .)


state 4

    (0) S' -> program .



state 5

    (41) define_stmt -> DEFINE . IDENT PROC LPAREN param_list RPAREN stmt_list END

    IDENT           shift and go to state 27


state 6

    (38) assign_stmt -> IDENT . ASSIGNOP expr

    ASSIGNOP        shift and go to state 28


state 7

    (2) stmt_list -> stmt . SEMICOLON stmt_list
    (3) stmt_list -> stmt .

    SEMICOLON       shift and go to state 29
    $end            reduce using rule 3 (stmt_list -> stmt .)
    OD              reduce using rule 3 (stmt_list -> stmt .)
    ELSE            reduce using rule 3 (stmt_list -> stmt .)
    FI              reduce using rule 3 (stmt_list -> stmt .)
    END             reduce using rule 3 (stmt_list -> stmt .)


state 8

    (40) if_stmt -> IF . expr THEN stmt_list ELSE stmt_list FI
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (19) fact -> . List
    (26) fact -> . CAR LPAREN Item RPAREN
    (27) fact -> . CAR LPAREN IDENT RPAREN
    (28) fact -> . CDR LPAREN IDENT RPAREN
    (29) fact -> . CDR LPAREN Item RPAREN
    (30) fact -> . NULL QUESTIONMARK LPAREN Item RPAREN
    (31) fact -> . NULL QUESTIONMARK LPAREN IDENT RPAREN
    (32) fact -> . LIST QUESTIONMARK LPAREN Item RPAREN
    (33) fact -> . LIST QUESTIONMARK LPAREN IDENT RPAREN
    (34) fact -> . INT QUESTIONMARK LPAREN IDENT RPAREN
    (35) fact -> . INT QUESTIONMARK LPAREN Item RPAREN
    (36) fact -> . CONS LPAREN IDENT COMMA IDENT RPAREN
    (37) fact -> . CONS LPAREN Item COMMA List RPAREN
    (44) func_call -> . IDENT LPAREN expr_list RPAREN
    (20) List -> . SQUAREBRAC1 ListItems SQUAREBRAC2
    (21) List -> . SQUAREBRAC1 SQUAREBRAC2

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 14
    IDENT           shift and go to state 17
    CAR             shift and go to state 13
    CDR             shift and go to state 25
    NULL            shift and go to state 15
    LIST            shift and go to state 23
    INT             shift and go to state 21
    CONS            shift and go to state 12
    SQUAREBRAC1     shift and go to state 24

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 30
    List                           shift and go to state 18
    fact                           shift and go to state 26

state 9

    (1) program -> stmt_list .

    $end            reduce using rule 1 (program -> stmt_list .)


state 10

    (6) stmt -> if_stmt .

    SEMICOLON       reduce using rule 6 (stmt -> if_stmt .)
    ELSE            reduce using rule 6 (stmt -> if_stmt .)
    OD              reduce using rule 6 (stmt -> if_stmt .)
    END             reduce using rule 6 (stmt -> if_stmt .)
    FI              reduce using rule 6 (stmt -> if_stmt .)
    $end            reduce using rule 6 (stmt -> if_stmt .)


state 11

    (5) stmt -> while_stmt .

    SEMICOLON       reduce using rule 5 (stmt -> while_stmt .)
    ELSE            reduce using rule 5 (stmt -> while_stmt .)
    OD              reduce using rule 5 (stmt -> while_stmt .)
    END             reduce using rule 5 (stmt -> while_stmt .)
    FI              reduce using rule 5 (stmt -> while_stmt .)
    $end            reduce using rule 5 (stmt -> while_stmt .)


state 12

    (36) fact -> CONS . LPAREN IDENT COMMA IDENT RPAREN
    (37) fact -> CONS . LPAREN Item COMMA List RPAREN

    LPAREN          shift and go to state 31


state 13

    (26) fact -> CAR . LPAREN Item RPAREN
    (27) fact -> CAR . LPAREN IDENT RPAREN

    LPAREN          shift and go to state 32


state 14

    (16) fact -> NUMBER .

    TIMES           reduce using rule 16 (fact -> NUMBER .)
    RPAREN          reduce using rule 16 (fact -> NUMBER .)
    PLUS            reduce using rule 16 (fact -> NUMBER .)
    MINUS           reduce using rule 16 (fact -> NUMBER .)
    DO              reduce using rule 16 (fact -> NUMBER .)
    THEN            reduce using rule 16 (fact -> NUMBER .)
    SEMICOLON       reduce using rule 16 (fact -> NUMBER .)
    $end            reduce using rule 16 (fact -> NUMBER .)
    OD              reduce using rule 16 (fact -> NUMBER .)
    ELSE            reduce using rule 16 (fact -> NUMBER .)
    FI              reduce using rule 16 (fact -> NUMBER .)
    END             reduce using rule 16 (fact -> NUMBER .)
    COMMA           reduce using rule 16 (fact -> NUMBER .)


state 15

    (30) fact -> NULL . QUESTIONMARK LPAREN Item RPAREN
    (31) fact -> NULL . QUESTIONMARK LPAREN IDENT RPAREN

    QUESTIONMARK    shift and go to state 33


state 16

    (18) fact -> func_call .

    TIMES           reduce using rule 18 (fact -> func_call .)
    RPAREN          reduce using rule 18 (fact -> func_call .)
    PLUS            reduce using rule 18 (fact -> func_call .)
    MINUS           reduce using rule 18 (fact -> func_call .)
    DO              reduce using rule 18 (fact -> func_call .)
    THEN            reduce using rule 18 (fact -> func_call .)
    SEMICOLON       reduce using rule 18 (fact -> func_call .)
    $end            reduce using rule 18 (fact -> func_call .)
    OD              reduce using rule 18 (fact -> func_call .)
    ELSE            reduce using rule 18 (fact -> func_call .)
    FI              reduce using rule 18 (fact -> func_call .)
    END             reduce using rule 18 (fact -> func_call .)
    COMMA           reduce using rule 18 (fact -> func_call .)


state 17

    (17) fact -> IDENT .
    (44) func_call -> IDENT . LPAREN expr_list RPAREN

    TIMES           reduce using rule 17 (fact -> IDENT .)
    RPAREN          reduce using rule 17 (fact -> IDENT .)
    PLUS            reduce using rule 17 (fact -> IDENT .)
    MINUS           reduce using rule 17 (fact -> IDENT .)
    DO              reduce using rule 17 (fact -> IDENT .)
    THEN            reduce using rule 17 (fact -> IDENT .)
    SEMICOLON       reduce using rule 17 (fact -> IDENT .)
    $end            reduce using rule 17 (fact -> IDENT .)
    OD              reduce using rule 17 (fact -> IDENT .)
    ELSE            reduce using rule 17 (fact -> IDENT .)
    FI              reduce using rule 17 (fact -> IDENT .)
    END             reduce using rule 17 (fact -> IDENT .)
    COMMA           reduce using rule 17 (fact -> IDENT .)
    LPAREN          shift and go to state 34


state 18

    (19) fact -> List .

    TIMES           reduce using rule 19 (fact -> List .)
    RPAREN          reduce using rule 19 (fact -> List .)
    PLUS            reduce using rule 19 (fact -> List .)
    MINUS           reduce using rule 19 (fact -> List .)
    DO              reduce using rule 19 (fact -> List .)
    THEN            reduce using rule 19 (fact -> List .)
    SEMICOLON       reduce using rule 19 (fact -> List .)
    $end            reduce using rule 19 (fact -> List .)
    OD              reduce using rule 19 (fact -> List .)
    ELSE            reduce using rule 19 (fact -> List .)
    FI              reduce using rule 19 (fact -> List .)
    END             reduce using rule 19 (fact -> List .)
    COMMA           reduce using rule 19 (fact -> List .)


state 19

    (15) fact -> LPAREN . expr RPAREN
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (19) fact -> . List
    (26) fact -> . CAR LPAREN Item RPAREN
    (27) fact -> . CAR LPAREN IDENT RPAREN
    (28) fact -> . CDR LPAREN IDENT RPAREN
    (29) fact -> . CDR LPAREN Item RPAREN
    (30) fact -> . NULL QUESTIONMARK LPAREN Item RPAREN
    (31) fact -> . NULL QUESTIONMARK LPAREN IDENT RPAREN
    (32) fact -> . LIST QUESTIONMARK LPAREN Item RPAREN
    (33) fact -> . LIST QUESTIONMARK LPAREN IDENT RPAREN
    (34) fact -> . INT QUESTIONMARK LPAREN IDENT RPAREN
    (35) fact -> . INT QUESTIONMARK LPAREN Item RPAREN
    (36) fact -> . CONS LPAREN IDENT COMMA IDENT RPAREN
    (37) fact -> . CONS LPAREN Item COMMA List RPAREN
    (44) func_call -> . IDENT LPAREN expr_list RPAREN
    (20) List -> . SQUAREBRAC1 ListItems SQUAREBRAC2
    (21) List -> . SQUAREBRAC1 SQUAREBRAC2

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 14
    IDENT           shift and go to state 17
    CAR             shift and go to state 13
    CDR             shift and go to state 25
    NULL            shift and go to state 15
    LIST            shift and go to state 23
    INT             shift and go to state 21
    CONS            shift and go to state 12
    SQUAREBRAC1     shift and go to state 24

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 35
    List                           shift and go to state 18
    fact                           shift and go to state 26

state 20

    (12) expr -> term .
    (13) term -> term . TIMES fact

    COMMA           reduce using rule 12 (expr -> term .)
    PLUS            reduce using rule 12 (expr -> term .)
    MINUS           reduce using rule 12 (expr -> term .)
    RPAREN          reduce using rule 12 (expr -> term .)
    SEMICOLON       reduce using rule 12 (expr -> term .)
    $end            reduce using rule 12 (expr -> term .)
    OD              reduce using rule 12 (expr -> term .)
    ELSE            reduce using rule 12 (expr -> term .)
    FI              reduce using rule 12 (expr -> term .)
    END             reduce using rule 12 (expr -> term .)
    THEN            reduce using rule 12 (expr -> term .)
    DO              reduce using rule 12 (expr -> term .)
    TIMES           shift and go to state 36


state 21

    (34) fact -> INT . QUESTIONMARK LPAREN IDENT RPAREN
    (35) fact -> INT . QUESTIONMARK LPAREN Item RPAREN

    QUESTIONMARK    shift and go to state 37


state 22

    (39) while_stmt -> WHILE expr . DO stmt_list OD
    (8) expr -> expr . PLUS term
    (9) expr -> expr . MINUS term

    DO              shift and go to state 38
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40


state 23

    (32) fact -> LIST . QUESTIONMARK LPAREN Item RPAREN
    (33) fact -> LIST . QUESTIONMARK LPAREN IDENT RPAREN

    QUESTIONMARK    shift and go to state 41


state 24

    (20) List -> SQUAREBRAC1 . ListItems SQUAREBRAC2
    (21) List -> SQUAREBRAC1 . SQUAREBRAC2
    (22) ListItems -> . Item COMMA ListItems
    (23) ListItems -> . Item
    (24) Item -> . NUMBER
    (25) Item -> . List
    (20) List -> . SQUAREBRAC1 ListItems SQUAREBRAC2
    (21) List -> . SQUAREBRAC1 SQUAREBRAC2

    SQUAREBRAC2     shift and go to state 46
    NUMBER          shift and go to state 44
    SQUAREBRAC1     shift and go to state 24

    Item                           shift and go to state 42
    List                           shift and go to state 43
    ListItems                      shift and go to state 45

state 25

    (28) fact -> CDR . LPAREN IDENT RPAREN
    (29) fact -> CDR . LPAREN Item RPAREN

    LPAREN          shift and go to state 47


state 26

    (14) term -> fact .

    TIMES           reduce using rule 14 (term -> fact .)
    DO              reduce using rule 14 (term -> fact .)
    PLUS            reduce using rule 14 (term -> fact .)
    MINUS           reduce using rule 14 (term -> fact .)
    THEN            reduce using rule 14 (term -> fact .)
    RPAREN          reduce using rule 14 (term -> fact .)
    SEMICOLON       reduce using rule 14 (term -> fact .)
    $end            reduce using rule 14 (term -> fact .)
    OD              reduce using rule 14 (term -> fact .)
    ELSE            reduce using rule 14 (term -> fact .)
    FI              reduce using rule 14 (term -> fact .)
    END             reduce using rule 14 (term -> fact .)
    COMMA           reduce using rule 14 (term -> fact .)


state 27

    (41) define_stmt -> DEFINE IDENT . PROC LPAREN param_list RPAREN stmt_list END

    PROC            shift and go to state 48


state 28

    (38) assign_stmt -> IDENT ASSIGNOP . expr
    (8) expr -> . expr PLUS term
    (9) expr -> . expr MINUS term
    (12) expr -> . term
    (13) term -> . term TIMES fact
    (14) term -> . fact
    (15) fact -> . LPAREN expr RPAREN
    (16) fact -> . NUMBER
    (17) fact -> . IDENT
    (18) fact -> . func_call
    (19) fact -> . List
    (26) fact -> . CAR LPAREN Item RPAREN
    (27) fact -> . CAR LPAREN IDENT RPAREN
    (28) fact -> . CDR LPAREN IDENT RPAREN
    (29) fact -> . CDR LPAREN Item RPAREN
    (30) fact -> . NULL QUESTIONMARK LPAREN Item RPAREN
    (31) fact -> . NULL QUESTIONMARK LPAREN IDENT RPAREN
    (32) fact -> . LIST QUESTIONMARK LPAREN Item RPAREN
    (33) fact -> . LIST QUESTIONMARK LPAREN IDENT RPAREN
    (34) fact -> . INT QUESTIONMARK LPAREN IDENT RPAREN
    (35) fact -> . INT QUESTIONMARK LPAREN Item RPAREN
    (36) fact -> . CONS LPAREN IDENT COMMA IDENT RPAREN
    (37) fact -> . CONS LPAREN Item COMMA List RPAREN
    (44) func_call -> . IDENT LPAREN expr_list RPAREN
    (20) List -> . SQUAREBRAC1 ListItems SQUAREBRAC2
    (21) List -> . SQUAREBRAC1 SQUAREBRAC2

    LPAREN          shift and go to state 19
    NUMBER          shift and go to state 14
    IDENT           shift and go to state 17
    CAR             shift and go to state 13
    CDR             shift and go to state 25
    NULL            shift and go to state 15
    LIST            shift and go to state 23
    INT             shift and go to state 21
    CONS            shift and go to state 12
    SQUAREBRAC1     shift and go to state 24

    func_call                      shift and go to state 16
    term                           shift and go to state 20
    expr                           shift and go to state 49
    List                           shift and go to state 18
    fact                           shift and go to state 26

state 29

    (2) stmt_list -> stmt SEMICOLON . stmt_list
    (2) stmt_list -> . stmt SEMICOLON stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . assign_stmt
    (5) stmt -> . while_stmt
    (6) stmt -> . if_stmt
    (7) stmt -> . define_stmt
    (38) assign_stmt -> . IDENT ASSIGNOP expr
    (39) while_stmt -> . WHILE expr DO stmt_list OD
    (40) if_stmt -> . IF expr THEN stmt_list ELSE stmt_list FI
    (41) define_stmt -> . DEFINE IDENT PROC LPAREN param_list RPAREN stmt_list END

    IDENT           shift and go to state 6
    WHILE           shift and go to state 1
    IF              shift and go to state 8
    DEFINE          shift and go to state 5

    stmt_list                      shift and go to state 50
    if_stmt                        shift and go to state 10
    define_stmt                    shift and go to state 2
    stmt                           shift and go to state 7
    assign_stmt                    shift and go to state 3
    while_stmt                     shift and go to state 11

state 30

    (40) if_stmt -> IF expr . THEN stmt_list ELSE stmt_list FI
    (8) expr -> expr . PLUS term
    (9) expr -> expr . MINUS term

    THEN            shift and go to state 51
    PLUS            shift and go to state 39
    MINUS           shift and go to state 40


state 31

    (36) fact -> CONS LPAREN . IDENT COMMA IDENT RPAREN
    (37) fact -> CONS LPAREN . Item COMMA List RPAREN
    (24) Item -> . NUMBER
    (25) Item -> . List
    (20) List -> . SQUAREBRAC1 ListItems SQUAREBRAC2
    (21) List -> . SQUAREBRAC1 SQUAREBRAC2

    IDENT           shift and go to state 52
    NUMBER          shift and go to state 44
    SQUAREBRAC1     shift and go to state 24

    Item                           shift and go to state 53
    List                           shift and go to state 43

state 32

    (26) fact -> CAR LPAREN . Item RPAREN
    (27) fact -> CAR LPAREN . IDENT RPAREN
    (24) Item -> . NUMBER
    (25) Item -> . List
    (20) List -> . SQUAREBRAC1 ListItems SQUAREBRAC2
    (21) List -> . SQUAREBRAC1 SQUAREBRAC2

    IDENT           shift and go to state 54
    NUMBER          shift and go to state 44
    SQUAREBRAC1     shift and go to state 24

    Item                           shift and go to state 55
    List                           shift and go to state 43

state 33
